// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default 1`] = `
<button
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "background": "yellow",
      "fontSize": "24px",
    }
  }
  tabIndex={0}
  type="button"
>
  Basic Log Button
</button>
`;

exports[`Storyshots Button Toggle Button 1`] = `
<button
  aria-label="example label"
  disabled={false}
  name="Example"
  onClick={[Function]}
  style={
    Object {
      "background": "yellow",
      "fontSize": "24px",
    }
  }
  tabIndex={0}
  type="button"
>
  Basic Log Button
</button>
`;
